# meshcore-homeassistant-bridge

./: .gitignore  Dockerfile  README.md  config.yaml.example  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-build.yml  docker.yml  hello.yml
src/meshcore_ha_bridge/: __init__.py  __main__.py  auth.py  bridge.py  commands.py  config.py  ha_client.py
