[project]
name = "meshcore-homeassistant-bridge"
version = "0.1.0"
description = "Meshcore Companion that bridges DMs to Home Assistant commands"
requires-python = ">=3.11"
dependencies = [
    "meshcore>=0.4.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.scripts]
meshcore-ha-bridge = "meshcore_ha_bridge.__main__:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
